--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,10 @@ stages:
   - deploy
 
 before_script:
-  - apk add --no-cache py3-pip
+  - apk add --no-cache python3-dev libffi-dev gcc musl-dev
+  - python3 -m venv venv
+  - source venv/bin/activate
+  - pip install --upgrade pip
   - pip install -r requirements.txt
 
 build:
