--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ build:
     - docker
     - python
   script:
-    - docker-compose -f docker-compose.yml build -t $CI_REGISTRY_IMAGE
+    - docker-compose -f docker-compose.yml build
     - docker-compose -f docker-compose.yml exec web python manage.py migrate
 
 test:
