--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,51 +1,38 @@
-image: docker:latest
-
-services:
-  - docker:dind
-
-variables:
-  DOCKER_DRIVER: overlay2
-
 stages:
-  - build
   - test
-  - deploy
+  - build
+  - release
 
-before_script:
-  - apk add --no-cache python3-dev libffi-dev gcc musl-dev
-  - python3 -m venv venv
-  - source venv/bin/activate
-  - pip install --upgrade pip
-
-build:
-  stage: build
-  tags:
-    - docker
-    - python
-  script:
-    - docker-compose -f docker-compose.yml build
-    - docker-compose -f docker-compose.yml exec web python manage.py migrate
-
-test:
+Django Tests:
   stage: test
+  image: python: 3.12
+  script:
+    - pip install -r requirements.txt
+    - python -m pytest --noinput
   tags:
     - docker
-    - python
-  script:
-    - docker-compose -f docker-compose.yml down
-    - docker-compose -f docker-compose.yml up --abort-on-container-exit
-    - docker-compose -f docker-compose.yml exec web python -m pytest
-  after_script:
-    - docker-compose -f docker-compose.yml down
 
-deploy:
-  stage: deploy
+Docker Build:
+  stage: build
+  image: docker:stable
+  services:
+    - docker:dind
+  script:
+    - docker login -u gitlab-ci-token -p %{CI_JOB_TOKEN} ${CI_REGISTRY}
+    - docker compose build %{CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:${CI_COMMIT_REF_SLUG}
+    - docker push ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:${CI_COMMIT_REF_SLUG}
   tags:
     - docker
-    - python
-  only:
-    - master
+
+Release:
+  stage: release
+  image: docker:stable
+  services:
+    - docker:dind
   script:
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD https://gitlab.com/me7000428/bike-rent-tz
-    - docker tag bike-rent-tz %CI_REGISTRY_IMAGE
-    - docker push %CI_REGISTRY_IMAGE
+    - docker login -u gitlab-ci-token -p %{CI_JOB_TOKEN} ${CI_REGISTRY}
+    - docker pull ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:${CI_COMMIT_REF_SLUG}
+    - docker tag ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:${CI_COMMIT_REF_SLUG} ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:latest
+    - docker push ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:latest
+  tags:
+    - docker
