--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 
 Django Tests:
   stage: test
-  image: python: 3.12
+  image: python:latest
   script:
     - pip install -r requirements.txt
     - python -m pytest --noinput
