--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ Django Tests:
   image: python:latest
   script:
     - pip install -r app/requirements.txt
-    - python -m pytest --noinput
+    - python -m pytest
   tags:
     - docker
 
