--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,7 @@
 stages:
-  - test
   - build
+  - test
   - release
-
-Django Tests:
-  stage: test
-  image: python:latest
-  script:
-    - pip install -r app/requirements.txt
-    - python -m pytest
-  tags:
-    - docker
 
 Docker Build:
   stage: build
@@ -21,6 +12,17 @@ Docker Build:
     - docker login -u gitlab-ci-token -p %{CI_JOB_TOKEN} ${CI_REGISTRY}
     - docker compose build %{CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:${CI_COMMIT_REF_SLUG}
     - docker push ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:${CI_COMMIT_REF_SLUG}
+  tags:
+    - docker
+
+Django Tests:
+  stage: test
+  image: python:latest
+  script:
+    - pip install -r app/requirements.txt
+    - docker compose -f docker-compose.yml up -d
+    - docker compose exec web python manage.py migrate
+    - docker compose exec web python -m pytest
   tags:
     - docker
 
