--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,13 +7,18 @@ variables:
   DOCKER_DRIVER: overlay2
   DOCKER_TLS_CERTDIR: ""
 
+services:
+  - name: docker:20.10.8-dind
+    alias: docker
+    command: ["--host=tcp://0.0.0.0:2375", "--host=unix:///var/run/docker.sock"]
+
 Docker Build:
   stage: build
-  image: docker:stable
+  image: docker:20.10.8
   services:
-    - docker:dind
+    - name: docker:20.10.8-dind
   variables:
-    DOCKER_HOST: tcp://docker:2375/
+    DOCKER_HOST: tcp://docker:2375
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
     - docker-compose -f docker-compose.yml build
@@ -24,12 +29,11 @@ Docker Build:
 
 Django Tests:
   stage: test
-  image: python:latest
+  image: python:3.12
   services:
-    - docker:dind
+    - name: docker:20.10.8-dind
   variables:
-    DOCKER_HOST: tcp://docker:2375/
-    DOCKER_TLS_CERTDIR: ""
+    DOCKER_HOST: tcp://docker:2375
   script:
     - pip install -r app/requirements.txt
     - docker-compose -f docker-compose.yml up -d
@@ -43,12 +47,11 @@ Django Tests:
 
 Release:
   stage: release
-  image: docker:stable
+  image: docker:20.10.8
   services:
-    - docker:dind
+    - name: docker:20.10.8-dind
   variables:
-    DOCKER_HOST: tcp://docker:2375/
-    DOCKER_TLS_CERTDIR: ""
+    DOCKER_HOST: tcp://docker:2375
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
     - docker pull $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
