--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ Docker Build:
     - name: docker:20.10.8-dind
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - docker compose build
+    - docker-compose build
     - docker tag $CI_PROJECT_PATH:$CI_COMMIT_REF_SLUG $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
     - docker push $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
   tags:
@@ -33,9 +33,9 @@ Django Tests:
   script:
     - pip install -r app/requirements.txt
     - docker-compose -f docker-compose.yml up -d
-    - docker-compose exec web python manage.py migrate
-    - docker-compose exec web python -m pytest
-    - docker-compose down
+    - docker-compose -f docker-compose.yml exec web python manage.py migrate
+    - docker-compose -f docker-compose.yml exec web python -m pytest
+    - docker-compose -f docker-compose.yml down
   tags:
     - docker
   dependencies:
