--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,63 +1,13 @@
 stages:
   - build
   - test
-  - release
-
-variables:
-  DOCKER_DRIVER: overlay2
-  DOCKER_TLS_CERTDIR: ""
-
-services:
-  - name: docker:20.10.8-dind
-    alias: docker
-    command: ["--host=tcp://0.0.0.0:2375", "--host=unix:///var/run/docker.sock"]
-
-Docker Build:
-  stage: build
-  image: docker:20.10.8
-  services:
-    - name: docker:20.10.8-dind
-  script:
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - apk add --no-cache py-pip python3-dev libffi-dev openssl-dev gcc libc-dev rust cargo
-    - export PATH="$HOME/.cargo/bin:$PATH"
-    - rustup update stable # Update Rust and Cargo
-    - cargo --version # Check Cargo version
-    - rustc --version # Check Rust version
-    - pip install docker-compose
-    - docker-compose build
-    - docker tag $CI_PROJECT_PATH:$CI_COMMIT_REF_SLUG $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
-    - docker push $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
-  tags:
-    - docker
+  - deploy
 
 Django Tests:
   stage: test
-  image: python:3.12
-  services:
-    - name: docker:20.10.8-dind
+  image: python:latest
   script:
     - pip install -r app/requirements.txt
-    - docker-compose up -d
-    - docker-compose exec web python manage.py migrate
-    - docker-compose exec web python -m pytest
-    - docker-compose down
+    - python -m pytest --noinput
   tags:
     - docker
-  dependencies:
-    - Docker Build
-
-Release:
-  stage: release
-  image: docker:20.10.8
-  services:
-    - name: docker:20.10.8-dind
-  script:
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - docker pull $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
-    - docker tag $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:latest
-    - docker push $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:latest
-  tags:
-    - docker
-  dependencies:
-    - Django Tests
