--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ variables:
   DOCKER_TLS_CERTDIR: ""
 
 services:
-  - name: docker:20.10.8-dind
+  - name: docker:dind
     alias: docker
     command: ["--host=tcp://0.0.0.0:2375", "--host=unix:///var/run/docker.sock"]
 
@@ -16,10 +16,11 @@ Docker Build:
   stage: build
   image: docker:stable
   services:
-    - name: docker:20.10.8-dind
+    - name: docker:dind
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
     - apk add --no-cache py-pip python3-dev libffi-dev openssl-dev gcc libc-dev
+    - rm -rf $HOME/.cache/pip /tmp/pip-build-*
     - pip install --upgrade setuptools pip
     - pip install docker-compose
     - docker-compose build
@@ -30,10 +31,11 @@ Docker Build:
 
 Django Tests:
   stage: test
-  image: python:3.12
+  image: python:latest
   services:
-    - name: docker:20.10.8-dind
+    - name: docker:dind
   script:
+    - rm -rf $HOME/.cache/pip /tmp/pip-build-*
     - pip install -r app/requirements.txt
     - docker-compose up -d
     - docker-compose exec web python manage.py migrate
@@ -48,7 +50,7 @@ Release:
   stage: release
   image: docker:stable
   services:
-    - name: docker:20.10.8-dind
+    - name: docker:dind
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
     - docker pull $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
