--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 stages:
   - build
   - test
@@ -8,7 +10,7 @@ variables:
   DOCKER_TLS_CERTDIR: ""
 
 services:
-  - name: docker:dind
+  - docker:dind
     alias: docker
     command: ["--host=tcp://0.0.0.0:2375", "--host=unix:///var/run/docker.sock"]
 
@@ -16,7 +18,7 @@ Docker Build:
   stage: build
   image: docker:stable
   services:
-    - name: docker:dind
+    - docker:dind
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
     - apk add --no-cache py-pip python3-dev libffi-dev openssl-dev gcc libc-dev docker-compose
@@ -32,7 +34,7 @@ Django Tests:
   stage: test
   image: python:latest
   services:
-    - name: docker:dind
+    - docker:dind
   script:
     - rm -rf $HOME/.cache/pip /tmp/pip-build-*
     - pip install -r app/requirements.txt
@@ -49,7 +51,7 @@ Release:
   stage: release
   image: docker:stable
   services:
-    - name: docker:dind
+    - docker:dind
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
     - docker pull $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
