--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ Docker Build:
     - apk add --no-cache py-pip python3-dev libffi-dev openssl-dev gcc libc-dev docker-compose
     - rm -rf $HOME/.cache/pip /tmp/pip-build-*
     - pip install --upgrade setuptools pip
+    - pip install --upgrade docker-compose
     - docker-compose build
     - docker tag $CI_PROJECT_PATH:$CI_COMMIT_REF_SLUG $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
     - docker push $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
