--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ Docker Build:
     - name: docker:dind
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - apk add --no-cache py-pip python3-dev libffi-dev openssl-dev gcc libc-dev
+    - apk add py-pip python3-dev libffi-dev openssl-dev gcc libc-dev make
     - rm -rf $HOME/.cache/pip /tmp/pip-build-*
     - pip install --upgrade setuptools pip
     - pip install docker-compose
