--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ Docker Build:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
     - apk add py-pip python3-dev libffi-dev openssl-dev gcc libc-dev make
     - rm -rf $HOME/.cache/pip /tmp/pip-build-*
-    - pip install --upgrade setuptools pip
+    - pip install --upgrade setuptools pip wheel
     - pip install docker-compose
     - pip install --upgrade docker-compose
     - docker-compose build
