--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,63 +1,37 @@
-stages:
-  - build
-  - test
-  - release
+# .gitlab-ci.yml
 
-variables:
-  DOCKER_DRIVER: overlay2
-  DOCKER_TLS_CERTDIR: ""
+# Используем Docker executor
+image: docker:stable
 
 services:
-  - name: docker:dind
-    alias: docker
-    command: ["--host=tcp://0.0.0.0:2375", "--host=unix:///var/run/docker.sock"]
+  - docker:dind # сервис для доступа к Docker-демону внутри CI
 
-Docker Build:
-  stage: build
-  image: docker:stable
-  services:
-    - name: docker:dind
-  script:
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - apk add py-pip python3-dev libffi-dev openssl-dev gcc libc-dev make
-    - rm -rf $HOME/.cache/pip /tmp/pip-build-*
-    - pip install --upgrade setuptools pip wheel
-    - pip install docker-compose
-    - pip install --upgrade docker-compose
-    - docker-compose build
-    - docker tag $CI_PROJECT_PATH:$CI_COMMIT_REF_SLUG $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
-    - docker push $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
-  tags:
-    - docker
+stages:
+  - test
+  - deploy
 
-Django Tests:
+variables:
+  DOCKER_HOST: tcp://docker:2375/ # адрес демона Docker, обслуживающего сервис docker:dind
+  DOCKER_DRIVER: overlay2
+
+before_script:
+  - docker info
+
+pytest:
   stage: test
-  image: python:latest
-  services:
-    - name: docker:dind
   script:
-    - rm -rf $HOME/.cache/pip /tmp/pip-build-*
-    - pip install -r app/requirements.txt
-    - docker-compose up -d
-    - docker-compose exec web python manage.py migrate
-    - docker-compose exec web python -m pytest
-    - docker-compose down
-  tags:
-    - docker
-  dependencies:
-    - Docker Build
+    - docker-compose up -d # запускаем тестовую среду с помощью Docker Compose
+    - docker-compose exec web python manage.py migrate --noinput # проводим миграции в тестовой базе данных
+    - docker-compose exec web pytest # запускаем тесты с pytest
+    - docker-compose down # останавливаем тестовую среду после выполнения тестов
+  services:
+    - docker:19.03.12-dind # указываем версию сервиса docker:dind
 
-Release:
-  stage: release
-  image: docker:stable
-  services:
-    - name: docker:dind
+deploy:
+  stage: deploy
   script:
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - docker pull $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
-    - docker tag $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:latest
-    - docker push $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:latest
-  tags:
-    - docker
-  dependencies:
-    - Django Tests
+    - docker-compose up -d # развертываем приложение с помощью Docker Compose
+    - docker-compose down # останавливаем приложение после его развертывания
+  services:
+    - docker:19.03.12-dind # указываем версию сервиса docker:dind
+
