--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,10 +20,12 @@ Docker Build:
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
     - apk add --no-cache py-pip python3-dev libffi-dev openssl-dev gcc libc-dev
+    - apk add --no-cache make automake gcc g++ subversion python3-dev
     - rm -rf $HOME/.cache/pip /tmp/pip-build-*
     - pip install --upgrade setuptools pip
-    - pip install --use-pep517 docker-compose
-    - pip install --upgrade docker-compose --use-pep517
+    - pip install cython
+    - pip install docker-compose
+    - pip install --upgrade docker-compose
     - docker-compose build
     - docker tag $CI_PROJECT_PATH:$CI_COMMIT_REF_SLUG $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
     - docker push $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
@@ -36,9 +38,11 @@ Django Tests:
   services:
     - name: docker:dind
   script:
+    - apt-get update && apt-get install -y build-essential python3-dev
     - rm -rf $HOME/.cache/pip /tmp/pip-build-*
-    - pip install -r app/requirements.txt --use-pep517
-    - pip install docker-compose --use-pep517
+    - pip install cython
+    - pip install -r app/requirements.txt
+    - pip install docker-compose
     - docker-compose up -d
     - docker-compose exec web python manage.py migrate
     - docker-compose exec web python -m pytest
