--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,68 +1,42 @@
 stages:
-  - build
+  - prepare
   - test
-  - release
+  - build
+  - deploy
 
 variables:
   DOCKER_DRIVER: overlay2
-  DOCKER_TLS_CERTDIR: ""
 
 services:
-  - name: docker:dind
-    alias: docker
-    command: ["--host=tcp://0.0.0.0:2375", "--host=unix:///var/run/docker.sock"]
+  - docker:dind
 
-Docker Build:
-  stage: build
-  image: docker:stable
-  services:
-    - name: docker:dind
-  script:
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - apk add --no-cache py-pip python3-dev libffi-dev openssl-dev gcc libc-dev
-    - apk add --no-cache make automake gcc g++ subversion python3-dev
-    - rm -rf $HOME/.cache/pip /tmp/pip-build-*
-    - pip install --upgrade setuptools pip
-    - pip install cython
-    - pip install docker-compose
-    - pip install --upgrade docker-compose
-    - docker-compose build
-    - docker tag $CI_PROJECT_PATH:$CI_COMMIT_REF_SLUG $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
-    - docker push $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
-  tags:
-    - docker
+before_script:
+  - apk add --no-cache docker-compose
 
-Django Tests:
-  stage: test
-  image: python:latest
-  services:
-    - name: docker:dind
+prepare:
+  stage: prepare
   script:
-    - apt-get update && apt-get install -y build-essential python3-dev
-    - rm -rf $HOME/.cache/pip /tmp/pip-build-*
-    - pip install cython
-    - pip install -r app/requirements.txt
-    - pip install docker-compose
     - docker-compose up -d
     - docker-compose exec web python manage.py migrate
-    - docker-compose exec web python -m pytest
-    - docker-compose down
-  tags:
-    - docker
-  dependencies:
-    - Docker Build
 
-Release:
-  stage: release
-  image: docker:stable
-  services:
-    - name: docker:dind
+test:
+  stage: test
   script:
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - docker pull $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG
-    - docker tag $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:$CI_COMMIT_REF_SLUG $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:latest
-    - docker push $CI_REGISTRY/$CI_PROJECT_PATH/$CI_PROJECT_NAME:latest
-  tags:
-    - docker
-  dependencies:
-    - Django Tests
+    - docker-compose run web pytest
+    - docker-compose down
+
+build:
+  stage: build
+  script:
+    - docker-compose build
+  artifacts:
+    paths:
+      - docker-compose.yml
+
+deploy:
+  stage: deploy
+  script:
+    - echo "Deploying to production server"
+    # Здесь можно добавить команды для развертывания на вашем сервере
+    - docker-compose up -d
+    - docker-compose down
