--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,9 @@ variables:
   DOCKER_DRIVER: overlay2
 
 services:
-  - docker:dind
+  - name: docker:dind
+    alias: docker
+    command: ["--host=tcp://0.0.0.0:2375", "--host=unix:///var/run/docker.sock"]
 
 before_script:
   - apk add --no-cache docker-compose
