--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,38 +15,38 @@ services:
 before_script:
   - apk add --no-cache docker-compose
 
+before_script:
+  - docker info
+
 prepare:
   stage: prepare
   script:
-    - docker-compose up -d
-    - docker-compose exec web python manage.py migrate
-  tags:
-    - docker
+    - docker-compose -f docker-compose.yml up -d
+    - docker-compose -f docker-compose.yml exec web python manage.py migrate
 
 test:
   stage: test
   script:
-    - docker-compose run web pytest
-    - docker-compose down
-  tags:
-    - docker
+    - docker-compose -f docker-compose.yml run web pytest
 
 build:
   stage: build
   script:
-    - docker-compose build
+    - docker-compose -f docker-compose.yml build
   artifacts:
     paths:
       - docker-compose.yml
-  tags:
-    - docker
+
+cleanup:
+  stage: cleanup
+  script:
+    - docker-compose -f docker-compose.yml down
 
 deploy:
   stage: deploy
   script:
     - echo "Deploying to production server"
-    # Здесь можно добавить команды для развертывания на вашем сервере
-    - docker-compose up -d
-    - docker-compose down
-  tags:
-    - docker
+    # Добавьте здесь команды для развертывания на вашем сервере
+    - docker-compose -f docker-compose.yml up -d
+  only:
+    - master
