--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - 127.0.0.1:8000:8000
     env_file:
-      - .env
+      - $env
     depends_on:
       - db
   
@@ -14,16 +14,11 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
     env_file:
-      - .env
+      - $env
     environment:
-      - POSTGRES_USER=${SQL_USER}
-      - POSTGRES_PASSWORD=${SQL_PASSWORD}
-      - POSTGRES_DB=${SQL_DATABASE}
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $${DATABASE_USER}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${DATABASE_NAME}
 
   redis:
     image: redis
@@ -32,7 +27,7 @@ services:
     volumes:
       - redis-data:/data
     env_file:
-      - .env
+      - $env
 
   celery:
     image: celery
