--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ before_script:
 prepare:
   stage: prepare
   script:
-    - docker-compose -f docker-compose.yml up -d
+    - docker-compose -f docker-compose.yml up -d --build
     - docker-compose -f docker-compose.yml exec web python manage.py migrate
   tags:
     - docker
