--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages:
   - test
   - build
-  - deploy
+  - release
 
 variables:
   DOCKER_DRIVER: overlay2
@@ -51,7 +51,7 @@ build:
     - docker
 
 deploy:
-  stage: deploy
+  stage: release
   script:
     - docker login -u gitlab-ci-token -p ${CI_JOB_TOKEN} ${CI_REGISTRY}
     - docker pull ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:${CI_COMMIT_REF_CLUG}
