--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,11 @@ test:
 
 build:
   stage: build
+  image: docker:stable
+  services:
+    - docker:dind
   script:
+    - cd app
     - docker login -u gitlab-ci-token -p ${CI_JOB_TOKEN} ${CI_REGISTRY}
     - docker build -t ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:${CI_COMMIT_REF_SLUG} .
     - docker push ${CI_REGISTRY}/${CI_PROJECT_PATH}/${CI_PROJECT_NAME}:${CI_COMMIT_REF_SLUG}
