--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
 
+EMAIL_HOST_USER='example@gmail.com'
+EMAIL_HOST_PASSWORD='*******'
+
 REDIS_HOST='redis'
 REDIS_PORT=6379
 CELERY_BROKER_URL=redis://redis:6379/0
