--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,8 @@ test:
     - echo "REDIS_HOST=${REDIS_HOST}" >> .env
     - echo "REDIS_PORT=${REDIS_PORT}" >> .env
     - echo "CELERY_BROKER_URL=${CELERY_BROKER_URL}" >> .env
+    - echo "EMAIL_HOST_USER=${EMAIL_HOST_USER}" >> .env
+    - echo "EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}" >> .env
     - docker-compose -f docker-compose.yml up -d --build
     - docker-compose -f docker-compose.yml exec web python manage.py migrate
     - docker-compose -f docker-compose.yml run web pytest
